--- a/src/assets/styles/sidebar-footer.css
+++ b/src/assets/styles/sidebar-footer.css
@@ -43,7 +43,6 @@ body {
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
-  font-family: var(--font-dm-sans);
 }
 
 .library {
@@ -72,7 +71,6 @@ body {
   border: 0px;
   font-size: 14px;
   font-weight: 700;
-  font-family: var(--font-dm-sans);
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -113,7 +111,6 @@ body {
 .section-playlist__content .text {
   padding-bottom: 14px;
   color: #fff;
-  font-family: var(--font-dm-sans);
 }
 
 .section-playlist__content .title {
@@ -133,7 +130,6 @@ body {
   border-radius: 20px;
   font-size: 12px;
   font-weight: 700;
-  font-family: var(--font-dm-sans);
   text-decoration: none;
   text-transform: none;
   padding: 10px;
@@ -148,7 +144,6 @@ body {
 
 .sidebar .cookies a {
   color: #b3b3b3;
-  font-family: var(--font-dm-sans);
   font-weight: 500;
   font-size: 10px;
   text-decoration: none;
@@ -176,7 +171,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(to right, #ae2896, #509bf5);
+  background: linear-gradient(to right, #c92fac, #c650f5);
   padding: 15px 40px;
   display: flex;
   justify-content: space-between;
@@ -190,14 +185,12 @@ body {
   font-weight: 400;
   font-size: 12px;
   margin-bottom: 10px;
-  font-family: var(--font-dm-sans);
 }
 
 .disclaimer-premium .disclaimer-premium__subtitle {
   color: #ffffff;
   font-size: 14px;
   font-weight: 500;
-  font-family: var(--font-dm-sans);
 }
 
 .disclaimer-premium button {
@@ -210,4 +203,8 @@ body {
   border-radius: 40px;
   cursor: pointer;
   flex-shrink: 0;
+}
+
+.subscribe, .login {
+  border: none;
 }
